--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap");
 
 * {
-  margin: 0;
-  padding: 0;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
 }
 
 body {
@@ -11,7 +9,7 @@ body {
 }
 
 h1 {
-  padding: .5em 1em;
+  padding: 0.5em 1em;
   background-color: white;
   border-bottom: 1px solid lightgrey;
   color: grey;
@@ -41,9 +39,8 @@ h1 {
 
 .item h2 {
   font-size: 1em;
-  margin-bottom: .2em;
+  margin-bottom: 0.2em;
 }
-
 
 /* estilos para tema oscuro ---------------------------------------------------------------------------------------------- */
 /* los suigientes estilos son los que usaremos para aplicar el modo oscuro, ustedes deberán modificar los selectores para
